# multi-agent-voice

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  TODOS.md  claudir.example.json  justfile  rust-toolchain.toml
.claude/memory/: feedback_telegram_bots.md
.claude/skills/voice-anonymization/: SKILL.md
.github/workflows/: automerge-canary.yml  automerge-classify.yml  required-checks-audit.yml  shadow-mode-reconcile.yml
bootstrap-guardian/: Cargo.toml  README.md
bootstrap-guardian/deploy/: bootstrap-guardian.service.tmpl  com.claudir.bootstrap-guardian.plist.tmpl  guardian.example.json
bootstrap-guardian/examples/: client.rs
bootstrap-guardian/src/: audit.rs  auth.rs  config.rs  lib.rs  main.rs  nonce.rs  paths.rs  proto.rs  server.rs
bootstrap-guardian/tests/: integration.rs
demo/: create_evaluation_dataset.py
demo/evaluation/: evaluation_pairs.tsv  speaker_mapping.tsv  transcriptions.tsv
docs/: AGENT_ARCHITECTURE.md  architecture.md  bootstrap-guardian.md  bot2bot-communication.md  nova-pr-queue.md  phase4-debugging.md  phase4-runbook.md  phase4-setup.md  server-deploy.md
eval/: demo_server.py  metrics.py  requirements.txt
eval/templates/: index.html
hooks/: pre-commit
rag/: ARCHITECTURE.md  README.md  eval_runner.py  index.py  log_experiment.py  query.py  server.py  task_tracker.py
scripts/: bootstrap-phase0.sh  lyria_music.py  uninstall-phase0.sh
specs/: CHATBOT.md
src/: classifier.rs  claude.rs  config.rs  dashboard.rs  guardian_client.rs  lib.rs  live_api.rs  main.rs  prefilter.rs
src/chatbot/: alerts.rs  bot_messages.rs  callbacks.rs  claude_code.rs  cognitive.rs  context.rs  database.rs  debounce.rs  detectors.rs  document.rs  dual_lane.rs  engine.rs  event_bus.rs  fix_plan_reply.rs  fix_plans.rs  format.rs  gemini.rs  gh_cli.rs  git_ops.rs  health.rs  journal.rs  message.rs  metrics.rs  mod.rs  planner.rs  prompt_builder.rs  reflection.rs  reminders.rs  self_eval.rs  snapshot.rs  telegram.rs  tests.rs  tool_dispatch.rs  tool_registry.rs  tools.rs  tts.rs  verify.rs  whisper.rs  workflow.rs  worktree.rs  (+1 more)
src/chatbot/tool_dispatch/: delegation.rs  fix_plans.rs  implementation.rs  memory.rs  messaging.rs  mod.rs  moderation.rs  planning.rs  protected_write.rs  reflection.rs  tools_custom.rs  triage.rs  utility.rs
static/: dashboard.html  live.html
supervisor/: Cargo.toml  jumavoy.example.json  jumavoy.service  nova.example.json  nova.service
supervisor/src/: main.rs
tests/: phase0_protected_write.rs  phase1_alerts_flow.rs  phase2_fix_plan_lifecycle.rs  phase3_worktree_flow.rs  voice_transcription.rs
tools/classify-pr/: Cargo.toml  README.md  build.rs
tools/classify-pr/fixtures/: README.md
tools/classify-pr/src/: classify.rs  exit_codes.rs  fmt_equiv.rs  lib.rs  main.rs  protected_paths.rs  toolchain.rs  verdict.rs
workspace/tools/: registry.yaml
