[package]
name = "jumavoy"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jumavoy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
teloxide = { version = "0.17", features = ["macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
